; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_charset_conv.c_mp_charset_guess.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_charset_conv.c_mp_charset_guess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"enca\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"guess\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"uchardet\00", align 1
@.str.3 = private unnamed_addr constant [80 x i8] c"This syntax for the --sub-codepage option was deprecated and has been removed.\0A\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"utf8:\00", align 1
@.str.5 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"Forcing charset '%s'.\0A\00", align 1
@.str.7 = private unnamed_addr constant [41 x i8] c"Data has a BOM, assuming %s as charset.\0A\00", align 1
@MP_ICONV_ALLOW_CUTOFF = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [56 x i8] c"Data looks like UTF-8, ignoring user-provided charset.\0A\00", align 1
@.str.9 = private unnamed_addr constant [6 x i8] c"utf-8\00", align 1
@.str.10 = private unnamed_addr constant [5 x i8] c"auto\00", align 1
@.str.11 = private unnamed_addr constant [32 x i8] c"Charset auto-detection failed.\0A\00", align 1
@.str.12 = private unnamed_addr constant [13 x i8] c"UTF-8-BROKEN\00", align 1
@.str.13 = private unnamed_addr constant [21 x i8] c"Using charset '%s'.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mp_charset_guess(i8* %0, %struct.mp_log* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.mp_log*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store %struct.mp_log* %1, %struct.mp_log** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %15 = load i8*, i8** %10, align 8
  %16 = call i64 @strcasecmp(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %30, label %18

18:                                               ; preds = %5
  %19 = load i8*, i8** %10, align 8
  %20 = call i64 @strcasecmp(i8* %19, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %30, label %22

22:                                               ; preds = %18
  %23 = load i8*, i8** %10, align 8
  %24 = call i64 @strcasecmp(i8* %23, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %22
  %27 = load i8*, i8** %10, align 8
  %28 = call i64 @strchr(i8* %27, i8 signext 58)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %41

30:                                               ; preds = %26, %22, %18, %5
  %31 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %32 = call i32 @mp_err(%struct.mp_log* %31, i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str.3, i64 0, i64 0))
  %33 = load i8*, i8** %10, align 8
  %34 = call i64 @strncasecmp(i8* %33, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i32 5)
  %35 = icmp eq i64 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %30
  %37 = load i8*, i8** %10, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 5
  store i8* %38, i8** %10, align 8
  br label %40

39:                                               ; preds = %30
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.5, i64 0, i64 0), i8** %10, align 8
  br label %40

40:                                               ; preds = %39, %36
  br label %41

41:                                               ; preds = %40, %26
  %42 = load i8*, i8** %10, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 0
  %44 = load i8, i8* %43, align 1
  %45 = sext i8 %44 to i32
  %46 = icmp eq i32 %45, 43
  br i1 %46, label %47, label %54

47:                                               ; preds = %41
  %48 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %49 = load i8*, i8** %10, align 8
  %50 = getelementptr inbounds i8, i8* %49, i64 1
  %51 = call i32 (%struct.mp_log*, i8*, ...) @mp_verbose(%struct.mp_log* %48, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0), i8* %50)
  %52 = load i8*, i8** %10, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 1
  store i8* %53, i8** %6, align 8
  br label %98

54:                                               ; preds = %41
  %55 = load i32, i32* %9, align 4
  %56 = call i8* @ms_bom_guess(i32 %55)
  store i8* %56, i8** %12, align 8
  %57 = load i8*, i8** %12, align 8
  %58 = icmp ne i8* %57, null
  br i1 %58, label %59, label %64

59:                                               ; preds = %54
  %60 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %61 = load i8*, i8** %12, align 8
  %62 = call i32 (%struct.mp_log*, i8*, ...) @mp_verbose(%struct.mp_log* %60, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.7, i64 0, i64 0), i8* %61)
  %63 = load i8*, i8** %12, align 8
  store i8* %63, i8** %6, align 8
  br label %98

64:                                               ; preds = %54
  %65 = load i32, i32* %9, align 4
  %66 = call i32 @bstr_validate_utf8(i32 %65)
  store i32 %66, i32* %13, align 4
  %67 = load i32, i32* %13, align 4
  %68 = icmp sge i32 %67, 0
  br i1 %68, label %77, label %69

69:                                               ; preds = %64
  %70 = load i32, i32* %13, align 4
  %71 = icmp sgt i32 %70, -8
  br i1 %71, label %72, label %80

72:                                               ; preds = %69
  %73 = load i32, i32* %11, align 4
  %74 = load i32, i32* @MP_ICONV_ALLOW_CUTOFF, align 4
  %75 = and i32 %73, %74
  %76 = icmp ne i32 %75, 0
  br i1 %76, label %77, label %80

77:                                               ; preds = %72, %64
  %78 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %79 = call i32 (%struct.mp_log*, i8*, ...) @mp_verbose(%struct.mp_log* %78, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.8, i64 0, i64 0))
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0), i8** %6, align 8
  br label %98

80:                                               ; preds = %72, %69
  store i8* null, i8** %14, align 8
  %81 = load i8*, i8** %10, align 8
  %82 = call i64 @strcasecmp(i8* %81, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0))
  %83 = icmp eq i64 %82, 0
  br i1 %83, label %84, label %91

84:                                               ; preds = %80
  %85 = load i8*, i8** %14, align 8
  %86 = icmp ne i8* %85, null
  br i1 %86, label %90, label %87

87:                                               ; preds = %84
  %88 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %89 = call i32 (%struct.mp_log*, i8*, ...) @mp_verbose(%struct.mp_log* %88, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.11, i64 0, i64 0))
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i8** %14, align 8
  br label %90

90:                                               ; preds = %87, %84
  br label %93

91:                                               ; preds = %80
  %92 = load i8*, i8** %10, align 8
  store i8* %92, i8** %14, align 8
  br label %93

93:                                               ; preds = %91, %90
  %94 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %95 = load i8*, i8** %14, align 8
  %96 = call i32 (%struct.mp_log*, i8*, ...) @mp_verbose(%struct.mp_log* %94, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.13, i64 0, i64 0), i8* %95)
  %97 = load i8*, i8** %14, align 8
  store i8* %97, i8** %6, align 8
  br label %98

98:                                               ; preds = %93, %77, %59, %47
  %99 = load i8*, i8** %6, align 8
  ret i8* %99
}

declare dso_local i64 @strcasecmp(i8*, i8*) #1

declare dso_local i64 @strchr(i8*, i8 signext) #1

declare dso_local i32 @mp_err(%struct.mp_log*, i8*) #1

declare dso_local i64 @strncasecmp(i8*, i8*, i32) #1

declare dso_local i32 @mp_verbose(%struct.mp_log*, i8*, ...) #1

declare dso_local i8* @ms_bom_guess(i32) #1

declare dso_local i32 @bstr_validate_utf8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
